Add OpenSC and pcsc-tools to operating system

--- a/configs/rutoken_4990_rpi2_defconfig
+++ b/configs/rutoken_4990_rpi2_defconfig
@@ -41,11 +41,13 @@ BR2_PACKAGE_COREUTILS=y
 BR2_PACKAGE_UTIL_LINUX_BINARIES=y
 BR2_PACKAGE_LIBTOOL=y
 BR2_PACKAGE_READLINE=y
+BR2_PACKAGE_OPENSC=y
 BR2_PACKAGE_STATSERIAL=y
 BR2_PACKAGE_SETSERIAL=y
 BR2_PACKAGE_WIRINGPI=y
 BR2_PACKAGE_LIBXSLT=y
 BR2_PACKAGE_PROCPS_NG=y
+BR2_PACKAGE_PCSC_TOOLS=y
 BR2_PACKAGE_PCSC_LITE_FORCE_LIBUSB=y
 BR2_PACKAGE_PCSC_LITE_EMBEDDED=y
 BR2_PACKAGE_PCSC_LITE_DEBUGATR=y
