--- a/configs/rutoken_4990_rpi2_defconfig
+++ b/configs/rutoken_4990_rpi2_defconfig
@@ -42,6 +42,7 @@ BR2_PACKAGE_UTIL_LINUX_BINARIES=y
 BR2_PACKAGE_LIBTOOL=y
 BR2_PACKAGE_READLINE=y
 BR2_PACKAGE_OPENSC=y
+BR2_PACKAGE_RUTOKEN_M2M_UTILS=y
 BR2_PACKAGE_STATSERIAL=y
 BR2_PACKAGE_SETSERIAL=y
 BR2_PACKAGE_WIRINGPI=y
