--- a/package/rutoken-m2m-sdk/Config.in
+++ b/package/rutoken-m2m-sdk/Config.in
@@ -3,5 +3,6 @@ menu "Rutoken M2M SDK"
 	source "package/rutoken-m2m-sdk/pcsc-tools/Config.in"
 	source "package/rutoken-m2m-sdk/opensc/Config.in"
 	source "package/rutoken-m2m-sdk/m2m-utils/Config.in"
+	source "package/rutoken-m2m-sdk/rtuart/Config.in"
 
 endmenu
