--- a/configs/rutoken_4990_rpi2_defconfig
+++ b/configs/rutoken_4990_rpi2_defconfig
@@ -44,6 +44,7 @@ BR2_PACKAGE_READLINE=y
 BR2_PACKAGE_OPENSC=y
 BR2_PACKAGE_RUTOKEN_M2M_UTILS=y
 BR2_PACKAGE_RTUART=y
+BR2_PACKAGE_RUTOKEN_SDK_PKCS11_SAMPLES=y
 BR2_PACKAGE_STATSERIAL=y
 BR2_PACKAGE_SETSERIAL=y
 BR2_PACKAGE_WIRINGPI=y
