--- a/package/rutoken-m2m-sdk/Config.in
+++ b/package/rutoken-m2m-sdk/Config.in
@@ -4,5 +4,6 @@ menu "Rutoken M2M SDK"
 	source "package/rutoken-m2m-sdk/opensc/Config.in"
 	source "package/rutoken-m2m-sdk/m2m-utils/Config.in"
 	source "package/rutoken-m2m-sdk/rtuart/Config.in"
+	source "package/rutoken-m2m-sdk/rutoken-sdk-pkcs11-samples/Config.in"
 
 endmenu
