Add rpi3 configuration

--- a/configs/rutoken_m2m_rpi3_defconfig
+++ b/configs/rutoken_m2m_rpi3_defconfig
@@ -1,5 +1,5 @@
 BR2_arm=y
-BR2_cortex_a7=y
+BR2_cortex_a53=y
 BR2_ARM_FPU_NEON_VFPV4=y
 BR2_CCACHE=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_14=y
@@ -12,20 +12,21 @@ BR2_GCC_VERSION_8_X=y
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 BR2_TARGET_GENERIC_HOSTNAME="RutokenM2M"
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
-BR2_ROOTFS_USERS_TABLES="board/rutoken/rutoken-4990-rpi2/users"
+BR2_ROOTFS_USERS_TABLES="board/rutoken-m2m-rpi3/users"
 BR2_TARGET_GENERIC_ISSUE="Please login to see information about m2m demo board"
 BR2_SYSTEM_DHCP="eth0"
 BR2_TARGET_TZ_INFO=y
 BR2_TARGET_LOCALTIME="Turkey"
-BR2_ROOTFS_OVERLAY="board/rutoken/rutoken-4990-rpi2/rootfs_overlay"
-BR2_ROOTFS_POST_BUILD_SCRIPT="board/raspberrypi2/post-build.sh"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="board/rutoken/rutoken-4990-rpi2/post-image.sh"
+BR2_ROOTFS_OVERLAY="board/rutoken-m2m-rpi3/rootfs_overlay"
+BR2_ROOTFS_POST_BUILD_SCRIPT="board/raspberrypi3/post-build.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="board/rutoken-m2m-rpi3/post-image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="--add-pi3-disable-bt-overlay"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,raspberrypi,linux,83b36f98e1a48d143f0b466fcf9f8c4e382c9a1c)/linux-83b36f98e1a48d143f0b466fcf9f8c4e382c9a1c.tar.gz"
 BR2_LINUX_KERNEL_DEFCONFIG="bcm2709"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2709-rpi-2-b"
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2710-rpi-3-b bcm2710-rpi-3-b-plus bcm2710-rpi-cm3"
 BR2_LINUX_KERNEL_DTS_OVERLAYS_SUPPORT=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_PYTHON3=y
