Add rtuartscreader package
Enable the package for rutoken_m2m-rpi*_defconfig.

Update rutoken-m2m-utils package to the version supporting
rtuartscreader.

Refer: RES-112

--- a/configs/rutoken_m2m_rpi3_defconfig
+++ b/configs/rutoken_m2m_rpi3_defconfig
@@ -45,6 +45,7 @@ BR2_PACKAGE_READLINE=y
 BR2_PACKAGE_OPENSC=y
 BR2_PACKAGE_RUTOKEN_M2M_UTILS=y
 BR2_PACKAGE_RTUART=y
+BR2_PACKAGE_RTUARTSCREADER=y
 BR2_PACKAGE_RUTOKEN_SDK_PKCS11_SAMPLES=y
 BR2_PACKAGE_RUTOKEN_SDK_RTENGINE_SAMPLES=y
 BR2_PACKAGE_STATSERIAL=y
