--- a/package/rutoken-m2m-sdk/Config.in
+++ b/package/rutoken-m2m-sdk/Config.in
@@ -4,6 +4,7 @@ menu "Rutoken M2M SDK"
 	source "package/rutoken-m2m-sdk/opensc/Config.in"
 	source "package/rutoken-m2m-sdk/rutoken-m2m-utils/Config.in"
 	source "package/rutoken-m2m-sdk/rtuart/Config.in"
+	source "package/rutoken-m2m-sdk/rtuartscreader/Config.in"
 	source "package/rutoken-m2m-sdk/rutoken-sdk-pkcs11-samples/Config.in"
 	source "package/rutoken-m2m-sdk/rutoken-sdk-rtengine-samples/Config.in"
 
